# libcxml

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
tools/cmake/: FindLibXML++.cmake
